second push time

--- a/index-2.html
+++ b/index-2.html
@@ -11,6 +11,7 @@
     <div class = "heading">
   <h1>LouIS PASTURE</h1>
       <h1>how's that</h1>
+      <h1>what is the corona</h1>
   </div>
   </body>
 </html>
